# ocean

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  building_for_android.md  building_for_ios.md  building_for_linux.md  building_for_macos.md  building_for_meta_quest.md  building_for_windows.md
impl/application/ocean/shark/: CMakeLists.txt  Shark.h
impl/application/ocean/test/: ApplicationTest.h  CMakeLists.txt
impl/ocean/base/: Accessor.h  ApplicationInterface.cpp  ApplicationInterface.h  Base.cpp  Base.h  BaseJni.java  Binary.h  Build.cpp  Build.h  CMakeLists.txt  Callback.h  Caller.h  CommandArguments.cpp  CommandArguments.h  Config.cpp  Config.h  DataType.cpp  DataType.h  DateTime.cpp  DateTime.h  DebugElements.cpp  DebugElements.h  Event.cpp  Event.h  Exception.cpp  Exception.h  Frame.cpp  Frame.h  HashMap.h  HashSet.h  HighPerformanceTimer.cpp  HighPerformanceTimer.h  KdTree.h  Lock.h  Maintenance.cpp  Maintenance.h  Median.h  Memory.h  Messenger.cpp  Messenger.h  (+58 more)
impl/ocean/base/jni/: BaseJni.cpp  BaseJni.h  BaseJni.java  CMakeLists.txt  JNI.h
impl/ocean/base/test/: RandomIIntegrationTest.cpp
impl/ocean/cv/detector/: CMakeLists.txt  CalibrationPatternDetector.cpp  CalibrationPatternDetector.h  Descriptor.h  Detector.h  FASTFeature.h  FASTFeatureDetector.cpp  FASTFeatureDetector.h  FREAKDescriptor.cpp  FREAKDescriptor.h  Feature.h  FeatureDetector.cpp  FeatureDetector.h  FrameChangeDetector.cpp  FrameChangeDetector.h  HarrisCorner.h  HarrisCornerDetector.cpp  HarrisCornerDetector.h  HemiCube.cpp  HemiCube.h  LineDetectorHough.cpp  LineDetectorHough.h  LineDetectorULF.cpp  LineDetectorULF.h  LineEvaluator.h  MessengerCodeDetector.cpp  MessengerCodeDetector.h  ORBDescriptor.h  ORBFeature.h  ORBFeatureDescriptor.cpp  ORBFeatureDescriptor.h  ORBFeatureOrientation.cpp  ORBFeatureOrientation.h  ORBSamplingPattern.cpp  ORBSamplingPattern.h  OrientedPointFeature.h  PointFeature.h  ShapeDetector.cpp  ShapeDetector.h  Utilities.cpp  (+1 more)
impl/ocean/cv/fonts/: CMakeLists.txt  Font.h  FontManager.cpp  FontManager.h  Fonts.h
impl/ocean/devices/arcore/: ACDepthTracker6DOF.cpp  ACDepthTracker6DOF.h  ACDevice.cpp  ACDevice.h  ACFactory.cpp  ACFactory.h  ACPlaneTracker6DOF.cpp  ACPlaneTracker6DOF.h  ACSceneTracker6DOF.cpp  ACSceneTracker6DOF.h  ACWorldTracker6DOF.cpp  ACWorldTracker6DOF.h  ARCore.cpp  ARCore.h  ARSessionManager.cpp  ARSessionManager.h  CMakeLists.txt  DevicesARCoreJni.java  Plugin.cpp  Plugin.h  ScopedARObject.h
impl/ocean/devices/arkit/: AKDepthTracker6DOF.h  AKDepthTracker6DOF.mm  AKDevice.h  AKDevice.mm  AKFaceTracker6DOF.h  AKFaceTracker6DOF.mm  AKFactory.h  AKFactory.mm  AKGeoAnchorsTracker6DOF.h  AKGeoAnchorsTracker6DOF.mm  AKPlaneTracker6DOF.h  AKPlaneTracker6DOF.mm  AKRoomPlanTracker6DOF.h  AKRoomPlanTracker6DOF.mm  AKSceneTracker6DOF.h  AKSceneTracker6DOF.mm  AKWorldTracker6DOF.h  AKWorldTracker6DOF.mm  ARKit.cpp  ARKit.h  CMakeLists.txt  Plugin.cpp  Plugin.h  Utilities.h  Utilities.mm
impl/ocean/devices/ios/: CMakeLists.txt  IOS.cpp  IOS.h  IOSAccelerationSensor3DOF.h  IOSAccelerationSensor3DOF.mm  IOSDevice.cpp  IOSDevice.h  IOSFactory.h  IOSFactory.mm  IOSGPSTracker.h  IOSGPSTracker.mm  IOSGravityTracker3DOF.h  IOSGravityTracker3DOF.mm  IOSGyroSensor3DOF.h  IOSGyroSensor3DOF.mm  IOSHeadingTracker3DOF.h  IOSHeadingTracker3DOF.mm  IOSSensor.cpp  (+7 more)
impl/ocean/interaction/: CMakeLists.txt  Interaction.h  Library.cpp  Library.h  Manager.cpp  Manager.h  UserInterface.h  UserInterface.mm
impl/ocean/io/: Base64.cpp  Base64.h  Bitstream.cpp  Bitstream.h  CMakeLists.txt  CameraCalibrationManager.cpp  CameraCalibrationManager.h  Compression.cpp  Compression.h  Directory.cpp  Directory.h  Directory.mm  File.cpp  File.h  File.mm  FileConfig.cpp  FileConfig.h  FileManager.cpp  FileManager.h  FileResolver.cpp  FileResolver.h  IO.h  JSONConfig.cpp  JSONConfig.h  JSONParser.cpp  JSONParser.h  LegacyCameraCalibrationManager.cpp  LegacyCameraCalibrationManager.h  Path.cpp  Path.h  ProjectFile.cpp  ProjectFile.h  Scanner.cpp  Scanner.h  Signature.cpp  Signature.h  Signature.mm  Utilities.cpp  Utilities.h  XMLConfig.cpp  (+1 more)
impl/ocean/math/: AnyCamera.h  AnyCameraPerception.h  Approximation.cpp  Approximation.h  AutomaticDifferentiation.h  BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Box2.h  Box3.cpp  Box3.h  CMakeLists.txt  Camera.h  ClusteringKMeans.h  ClusteringSpectral.cpp  ClusteringSpectral.h  Complex.h  Cone3.h  Cylinder3.h  DiscreteCosineTransform.cpp  DiscreteCosineTransform.h  Equation.h  Euler.h  ExponentialMap.h  FiniteLine2.h  FiniteLine3.h  FisheyeCamera.h  FourierTransformation.cpp  FourierTransformation.h  Frustum.h  HSVAColor.cpp  HSVAColor.h  HomogenousMatrix4.h  Interpolation.h  Line2.h  Line3.h  Lookup2.h  Math.h  MathUtilities.h  (+36 more)
impl/ocean/network/: Address4.cpp  Address4.h  BufferQueue.h  CMakeLists.txt  Client.cpp  Client.h  ConnectionOrientedClient.cpp  ConnectionOrientedClient.h  ConnectionOrientedServer.cpp  ConnectionOrientedServer.h  ConnectionlessClient.cpp  ConnectionlessClient.h  ConnectionlessServer.cpp  ConnectionlessServer.h  Data.h  HTTPClient.cpp  HTTPClient.h  HTTPSClient.cpp  HTTPSClient.h  HTTPSClient.mm  MaintenanceTCPConnector.cpp  MaintenanceTCPConnector.h  MaintenanceUDPConnector.cpp  MaintenanceUDPConnector.h  MessageQueue.cpp  MessageQueue.h  Network.h  NetworkJni.java  NetworkResource.cpp  NetworkResource.h  PackagedConnectionlessClient.cpp  PackagedConnectionlessClient.h  PackagedConnectionlessServer.cpp  PackagedConnectionlessServer.h  PackagedSocket.cpp  PackagedSocket.h  PackagedTCPClient.cpp  PackagedTCPClient.h  PackagedTCPServer.cpp  PackagedTCPServer.h  (+27 more)
impl/ocean/platform/: CMakeLists.txt  Keyboard.cpp  Keyboard.h  Keyboard.mm  Mouse.cpp  Mouse.h  Mouse.mm  Platform.h  ResourceManager.cpp  ResourceManager.h  System.cpp  System.h  UniqueId.h  Utilities.cpp  Utilities.h  Utilities.mm
impl/ocean/system/: CMakeLists.txt  Memory.cpp  Memory.h  OperatingSystem.cpp  OperatingSystem.h  OperatingSystemApple.mm  Performance.cpp  Performance.h  Process.cpp  Process.h  System.h
(+5197 files in other folders)
